试试commit单独一个文件

--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
 </head>
 <script src="http://ting.wifi.rising.cn/Scripts/jquery-1.12.4.min.js"></script>
 <script src="deiguoui.js"></script>
+<script></script>
 <body>
 
 </body>
