--- a/test.html
+++ b/test.html
@@ -8,27 +8,66 @@
 <script src="testUI.js"></script>
 <!--<script src="deiguoui.js"></script>-->
 <style>
-    #box{width: 100%;height: 500px;}
+    #box,#box2,#box3{width: 100%;height: 500px;}
 </style>
 <body>
-<div id='box'>adsf</div>
+<button value="高德地图" onclick="gaode()">高德地图</button>
+<button value="腾讯地图" onclick="tx()">腾讯地图</button>
+<button value="百度地图" onclick="baidu()">百度地图</button>
+<div id='box'>aaaaaa</div>
+<div id="box2">bbbbbb</div>
+<div id="box3">cccccc</div>
 <div></div>
 <script>
-    var map = $("#box").addMap($.mapTypes.gaode,{
-        mapZoom:15,
-        centerPoint:{longitude:116.397428,latitude:39.90923},
-        points:[{longitude:116.397428,latitude:39.90923},{longitude:116.667428,latitude:39.11923}]
-    });
-    console.log("---------------------------");
-    console.log($('div').each(function (index,elment) {
-      console.log(index);
-      console.log(elment);
-      console.log(this == elment);
-    }));
+    function gaode() {
+        $("#box").addMap($.mapTypes.gaode,{
+            mapZoom:15,
+            centerPoint:{longitude:116.397428,latitude:39.90923},
+            points:[{longitude:116.397428,latitude:39.90923},{longitude:116.667428,latitude:39.11923}]
+        });
+    }
+    function tx() {
+        $("#box").addMap($.mapTypes.qq,{
+            mapZoom:15,
+            centerPoint:{longitude:116.397428,latitude:39.90923},
+            points:[{longitude:116.397428,latitude:39.90923},{longitude:116.667428,latitude:39.11923}]
+        });
+    }
+    function baidu() {
+        $("#box").addMap($.mapTypes.baidu,{
+            mapZoom:15,
+            centerPoint:{longitude:116.397428,latitude:39.90923},
+            points:[{longitude:116.397428,latitude:39.90923},{longitude:116.667428,latitude:39.11923}]
+        });
+    }
 
-    $(window).resize(function (e) {
-        console.log(e);
-    });
+    // console.log("---------------------------");
+    // console.log($('div').each(function (index,elment) {
+    //   console.log(index);
+    //   console.log(elment);
+    //   console.log(this == elment);
+    // }));
+    //
+    // $(window).resize(function (e) {
+    //     console.log(e);
+    // });
+
+    // var o1 = {name:"o1"};
+    // var o2 = {type:1};
+    // var o3 = {type:2};
+    //
+    // $.extend(o2,o1);
+    // $.extend(o3,o1);
+    // console.log(o1);
+    // console.log(o2);
+    // console.log(o3);
+    //
+    // o1.name = "newname";
+    //
+    // console.log("----------------");
+    // console.log(o1);
+    // console.log(o2);
+    // console.log(o3);
 </script>
 </body>
 </html>
