地图封装，雏形，可用，第一版，添加了注释，整理了代码顺序

--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@
     $.addMapApi("googleMap",{
         tip:"谷歌地图",
         mapType:googleMap,
-        mapObj:"qq.maps",
+        mapObj:"qq",
         api:"https://map.qq.com/api/js?v=2.exp"
     });
 
